# projet_etudes_sdv_m1

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
app/modules/infrastructure/: hydra.py  nmap.py
deployment/docker/: api.Dockerfile  worker.Dockerfile
deployment/docker/openvas/: openvas.env
toolbox/core/: config.py
toolbox/modules/scanning/: openvas.py
toolbox/workers/: celery_app.py
toolbox/workers/tasks/: openvas_tasks.py
